# graphloom

./: .gitignore  CMakeLists.txt  README.md
include/graphloom/: graphloom.h
include/graphloom/common/: data_type.h  initializer.h  macros.h  status.h
include/graphloom/device/: cpu.h  device.h  registration.h
include/graphloom/graph/: graph_context.h  graph_def.h  node_def_builder.h  session.h
include/graphloom/op/: op.h  registration.h
include/graphloom/tensor/: tensor.h
scripts/: mingw_build_release.bat  mingw_test.bat  msvc_test.bat
src/: CMakeLists.txt
src/common/: status.cpp
src/device/: cpu.cpp  device.cpp  registration.cpp
src/graph/: graph.cpp  graph.h  graph_def.cpp  graph_factory.cpp  graph_factory.h  node_def_builder.cpp
src/op/: op.cpp  registration.cpp
src/tensor/: tensor.cpp
tests/: CMakeLists.txt  README.md  data_type_test.cpp  device_cpu_test.cpp  device_registry_test.cpp  node_def_builder_test.cpp  register_op_test.cpp  status_test.cpp
